# zk-delegated-msm

./: .clangd  .gitignore  Cargo.toml  README.md  build.rs
c/: consts.h  helper.c  helper.cpp  old.cpp  toeplitz.cpp  trapdoor.cpp  trapdoor.hpp  vect.h
src/: bindings.rs  client.rs  io.rs  khabbazian2g2t.rs  lib.rs  main.rs  server.rs  timer.rs  zk2g2t.rs
src/protocol/: khabbazian.rs  mod.rs  td_lpn.rs  toeplitz_lpn.rs  types.rs  zk_delegated_msm.rs
